<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.GridActivity">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/sort_variant"
        android:title="@string/action_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_popularity"
                    android:title="@string/menu_sort_popularity" />
                <item
                    android:id="@+id/menu_sort_rating"
                    android:title="@string/menu_sort_rating" />
                <item
                    android:id="@+id/menu_sort_favourite"
                    android:title="@string/menu_sort_favourite" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        android:orderInCategory="99"
        app:showAsAction="ifRoom" />
</menu>